--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@biomejs/biome": "1.9.4",
     "@commitlint/cli": "19.6.1",
     "@commitlint/config-conventional": "19.6.0",
+    "@release-it/conventional-changelog": "9.0.4",
     "@types/bun": "1.1.14",
     "commitizen": "4.3.1",
     "cz-conventional-changelog": "3.3.0",
