--- a/package.json
+++ b/package.json
@@ -2,10 +2,7 @@
   "name": "strong-array",
   "version": "1.0.2",
   "description": "Strongly typed read-only object methods",
-  "keywords": [
-    "array",
-    "typescript"
-  ],
+  "keywords": ["array", "typescript"],
   "homepage": "https://github.com/dankreiger/strong-array",
   "bugs": {
     "url": "https://github.com/dankreiger/strong-array/issues"
@@ -37,10 +34,7 @@
   "module": "dist/esm/index.js",
   "browser": "dist/iife/index.js",
   "types": "./dist/types/index.d.ts",
-  "files": [
-    "dist/**",
-    "!**/*.tsbuildinfo"
-  ],
+  "files": ["dist/**", "!**/*.tsbuildinfo"],
   "scripts": {
     "build": "bun run build.config.ts",
     "fix": "bunx biome check --write .",
