fix: make hooks more reasonable

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,6 +32,8 @@ jobs:
           version: latest
       - name: Run Biome
         run: biome ci .
+      - name: Run Tests
+        run: bun test
       - name: Release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
