--- a/lefthook.yml
+++ b/lefthook.yml
@@ -3,10 +3,6 @@ commit-msg:
   commands:
     test:
       run: bun test
-
-    'sort package json':
-      run: bunx sort-package-json    
-
     typecheck:
       glob: '*.{js,ts,jsx,tsx}'
       run: bunx tsc --noEmit    
@@ -15,7 +11,7 @@ commit-msg:
 
     'format and lint':
       glob: '*.{js,ts,jsx,tsx}'
-      run: bunx biome check --write {staged_files}
+      run: bunx sort-package-json && bunx biome check --write {staged_files}
       stage_fixed: true
 
 
