--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "strong-array",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "Strongly typed read-only object methods",
-  "keywords": ["array", "typescript"],
+  "keywords": [
+    "array",
+    "typescript"
+  ],
   "homepage": "https://github.com/dankreiger/strong-array",
   "bugs": {
     "url": "https://github.com/dankreiger/strong-array/issues"
@@ -34,7 +37,10 @@
   "module": "dist/esm/index.js",
   "browser": "dist/iife/index.js",
   "types": "./dist/types/index.d.ts",
-  "files": ["dist/**", "!**/*.tsbuildinfo"],
+  "files": [
+    "dist/**",
+    "!**/*.tsbuildinfo"
+  ],
   "scripts": {
     "build": "bun run build.config.ts",
     "fix": "bunx biome check --write .",
