--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,7 +25,8 @@ jobs:
         run: |
           git config user.name "${GITHUB_ACTOR}"
           git config user.email "${GITHUB_ACTOR}@users.noreply.github.com"
-      - run: bun install
+      - name: Install dependencies
+        run: bun install
       - name: Setup Biome
         uses: biomejs/setup-biome@v2
         with:
