--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,3 +1,15 @@
 {
-  "recommendations": ["biomejs.biome", "oven.bun-vscode"]
+  "recommendations": [
+    "biomejs.biome",
+    "oven.bun-vscode",
+    "mikestead.dotenv",
+    "csstools.postcss",
+    "bradlc.vscode-tailwindcss",
+    "vitest.explorer",
+    "humao.rest-client",
+    "yoavbls.pretty-ts-errors",
+    "ms-playwright.playwright",
+    "github.vscode-github-actions",
+    "lokalise.i18n-ally"
+  ]
 }
