--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "cz-conventional-changelog": "3.3.0",
     "globals": "15.14.0",
     "lefthook": "1.10.1",
+    "release-it": "17.11.0",
     "rimraf": "6.0.1",
     "typescript": "5.7.2"
   },
