--- a/package.json
+++ b/package.json
@@ -70,5 +70,8 @@
     "rimraf": "6.0.1",
     "typescript": "5.7.2"
   },
-  "umd": "dist/index.global.js"
+  "umd": "dist/index.global.js",
+  "trustedDependencies": [
+    "@biomejs/biome"
+  ]
 }
