--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "fix": "bunx biome check --write .",
     "lint": "eslint src",
     "refresh": "bunx rimraf bun.lockb node_modules && bun install",
-    "release": "dotenv release-it --",
+    "release": "LEFTHOOK=0 dotenv release-it --",
     "test": "bun test",
     "test:watch": "bun test --watch",
     "typecheck": "bunx tsc --noEmit"
